--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/svg+xml" href="./cu_logo.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Certificate Withdrawal Management System</title>
+  <title>University of Chittagong | Certificate Withdrawal Management System</title>
   <style>
-    @import url('https://fonts.googleapis.com/css2?family=Hind+Siliguri:wght@300;400;500;600;700&display=swap')
+    @import url('https://fonts.googleapis.com/css2?family=Hind+Siliguri:wght@300;400;500;600;700&display=swap');
   </style>
 </head>
 
